# rs-godot-test

./: README.md
godot/: HelloWorld.gdextension  Main_Scene.tscn  first_scene.tscn  hud.tscn  icon.svg.import  mob_scene.tscn  project.godot
godot/art/: House In a Forest Loop.ogg.import  enemyFlyingAlt_1.png.import  enemyFlyingAlt_2.png.import  enemySwimming_1.png.import  enemySwimming_2.png.import  enemyWalking_1.png.import  enemyWalking_2.png.import  gameover.wav.import  playerGrey_up1.png.import  playerGrey_up2.png.import  playerGrey_walk1.png.import  playerGrey_walk2.png.import
godot/fonts/: Xolonium-Regular.ttf.import
rust/: Cargo.toml
rust/src/: hud.rs  lib.rs  main_scene.rs  mob.rs  player.rs
